update to fix junit and coverage
Issue-Id:DCAEGEN2-82
Change-Id: Ib43e0e5caaf7be9c07df68faf68f0af7ceb3a595
Signed-off-by: Vijay <vv770d@att.com>